<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:context=".StatisticsActivity" />

        <LinearLayout
            android:id="@+id/validity8"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:gravity="top|end"
                android:text="Statistics" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/validity"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom|left"
            android:background="@android:color/white"
            android:gravity="top"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/validity2"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@android:color/white"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:gravity="start"
                    android:text="@string/Duration" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:gravity="start"
                    android:text="01:05:59" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/validity3"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@android:color/white"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:gravity="top|end"
                    android:text="@string/Steps" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="40dp"
                    android:gravity="top|end"
                    android:text="1520" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/validity1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/validity5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:gravity="top|left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginLeft="40px"
                    android:text="@string/Distance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginLeft="40px"
                    android:text="1.3 km" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="40dp"
                android:background="@android:color/white"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="80dp"
                    android:gravity="top|end"
                    android:text="@string/Speed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="100dp"
                    android:gravity="top|end"
                    android:text="1.5 km/h" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="right"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="20dp"
                android:src="@drawable/play" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>