<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RunSessionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--MAP-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
                <!--xmlns:map="http://schemas.android.com/apk/res-auto"-->
                <!--xmlns:tools="http://schemas.android.com/tools"-->
                <!--android:id="@+id/map"-->
                <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="300dp"-->
                <!--tools:context=".RunSessionActivity" />-->
            <!--MAP-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map_running"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    tools:context=".RunSessionActivity" />
            </LinearLayout>
        </LinearLayout>

        <!-- Duration and steps -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginTop="75dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="bottom"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="	#F8F8F8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:src="@drawable/baseline_access_time_black_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/Duration"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:id="@+id/textView_timer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="00:00:00"
                        android:textSize="18dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="bottom"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="	#F8F8F8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_directions_run_black_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/Steps"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="0"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="0dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="bottom"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="	#F8F8F8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_person_pin_circle_black_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/Distance"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="0 km"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="bottom"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="	#F8F8F8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_shutter_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_shutter_speed_black_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/Speed"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="0 km/h"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <!-- Start challenge button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="bottom|center_horizontal">

            <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/startNewChallenge"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:onClick="startChallenge"-->
            <!--android:src="@drawable/ic_menu_share" />-->

            <Button
                android:id="@+id/bt_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/baseline_play_circle_outline_black_24"
                android:onClick="onToggle"
                />

            <Button
                android:id="@+id/bt_pause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/baseline_pause_circle_outline_black_24dp"
                android:onClick="onToggle"
                 />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/baseline_stop_black_24dp"
                android:onClick="resetTimer" />

            <Button
                android:id="@+id/btn_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#F82E72"
                android:onClick="onFinish"
                android:text="Finish"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

